# bebop

./: .gitattributes  .gitignore  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
bebop-app/: README.md  buf.gen.yaml  index.html  package-lock.json  package.json  vite.config.ts
bebop-app/src/: App.css  App.tsx
bebop-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
bebop-app/src-tauri/.cargo/: config.toml
bebop-app/src-tauri/src/: lib.rs  main.rs
bebop-app/src-tauri/src/ble/: central.rs  framing.rs  mod.rs
bebop-app/src/ble/: index.ts  protocol.ts  tauriTransport.ts  transport.ts  types.ts  webBluetoothTransport.ts  wsAgentTransport.ts
bebop-app/src/components/: GamepadDriver.tsx  PolicyIoCard.tsx  ui.tsx
bebop-app/src/input/: index.ts  mapping.ts  types.ts  useGamepad.ts
bebop-app/src/proto/: bebop_pb.ts  bebop_runtime_pb.ts
bebop-app/src/runtime/: cache.ts  index.ts  types.ts  wsTransport.ts
bebop-app/src/screens/: ConfigScreen.tsx  ConnectByIpScreen.tsx  ControllersScreen.tsx  DashboardScreen.tsx  DirectControllersScreen.tsx  DoneScreen.tsx  MotorBenchScreen.tsx  ScanScreen.tsx  WelcomeScreen.tsx  WifiScreen.tsx
docs/: README.md  architecture.md  ble-protocol.md  onboarding.md  ota-flow.md
docs/hardware/: battery-wiring.html
firmware/: .clangd
firmware/bebop-linux/: Cargo.toml  README.md
firmware/bebop-linux/.cargo/: config.toml
firmware/bebop-linux/config/: bebop_v2.yaml  policy.onnx  policy.onnx.data
firmware/bebop-linux/deploy/systemd/: bebop-linux.service
firmware/bebop-linux/src/: can_interface.rs  config.rs  imu.rs  lib.rs  main.rs  mode.rs  observation.rs  odrive.rs  policy.rs  policy_io.rs  policy_runner.rs  powerboard.rs  robstride.rs  udp_command.rs
firmware/bebop-linux/src/safety/: bus_pool.rs  limits.rs  mod.rs  power_monitor.rs  supervisor.rs
firmware/bebop-linux/src/server/: handlers.rs  mod.rs  telemetry.rs  ws.rs
firmware/bebop-locomotion/: .gitignore  README.md  platformio.ini
firmware/bebop-locomotion/include/: BNO085_IMU.h  BebopPolicy.h  GenericMotor.h  MicroROS.h  ODriveMotor.h  RobotConfig.h  RobstrideMotor.h  RosPublishers.h  SerialCommands.h
firmware/bebop-locomotion/src/: MicroROS.cpp  RosPublishers.cpp  SerialCommands.cpp  main.cpp  main_sim.cpp
fusion-scripts/: hide-visible-sketches.py  merge-bodies.py  rename-body-to-component.py  set-mass.py
jetson-agent/: Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
jetson-agent/.cargo/: config.toml
jetson-agent/bebop-agent/: Cargo.toml  README.md
jetson-agent/bebop-agent/src/: error.rs  main.rs  state.rs  ws.rs
jetson-agent/bebop-agent/src/ble/: dispatcher.rs  framing.rs  mod.rs  server.rs  server_stub.rs  uuids.rs
jetson-agent/bebop-agent/src/config/: mod.rs
jetson-agent/bebop-agent/src/containers/: mod.rs
jetson-agent/bebop-agent/src/controller/: bluez.rs  evdev_input.rs  mapping.rs  mod.rs  stub.rs  supervisor.rs  teleop.rs  udp.rs
jetson-agent/bebop-agent/src/ota/: mod.rs
jetson-agent/bebop-agent/src/wifi/: mod.rs
jetson-agent/bebop-proto/: Cargo.toml  README.md  build.rs
jetson-agent/bebop-proto/proto/: bebop.proto  bebop_runtime.proto
jetson-agent/bebop-proto/src/: lib.rs
jetson-agent/deploy/: README.md
jetson-agent/deploy/debian/: README.md
jetson-agent/deploy/examples/: agent.toml
jetson-agent/deploy/scripts/: install.sh  uninstall.sh
jetson-agent/deploy/systemd/: bebop-agent.service
jetson-agent/robot-app/: Dockerfile  README.md  docker-compose.yml  main.py
jetson-flash/: README.md  setup_env.sh
ros2/: README.md
ros2/docker/: Dockerfile  entrypoint.sh  requirements.txt
ros2/src/bebop_pilot/: CMakeLists.txt  README.md  package.xml
ros2/src/bebop_pilot/bebop_pilot/: __init__.py  robstride.py
ros2/src/bebop_pilot/config/: motor_bus.yaml  policy_runner.yaml  ps5_dualsense.yaml  safety_limits.yaml
ros2/src/bebop_pilot/launch/: bringup.launch.py  drive.launch.py  pilot.launch.py
ros2/src/bebop_pilot/scripts/: bno085_imu.py  motor_bus.py  motor_safety_check.py  pilot_node.py  policy_runner.py  rate_monitor.py
ros2/src/bebopv2_description/: package.xml  setup.py
ros2/src/bebopv2_description/launch/: display.launch.py  gazebo.launch.py
ros2/src/bebopv2_description/meshes/: foot_left_1.stl  foot_left_1_1.stl  foot_right_1.stl  foot_right_1_1.stl  hip_abduction_left_1.stl  hip_abduction_left_1_1.stl  hip_abduction_right_1.stl  hip_abduction_right_1_1.stl  shin_left_1.stl  shin_left_1_1.stl  shin_right_1.stl  shin_right_1_1.stl
ros2/src/bebopv2_description/scripts/: xacro-to-urdf.sh
ros2/src/bebopv2_description/urdf/: bebopv2.gazebo  bebopv2.ros2control  bebopv2.urdf  bebopv2.xacro  materials.xacro
scripts/: build-gs-usb.sh  install-jetson.sh
sim/: README.md  play_bebop.py  pyproject.toml  train_bebop.py
sim/bebop_training/: __init__.py  export_bebop_model.py
sim/bebop_training/agents/: rsl_rl_ppo_cfg.py
sim/bebop_training/envs/: bebop_base_cfg.py  bebop_v2_actions.py  bebop_v2_base_cfg.py  bebop_v2_rewards.py  bebop_v2_terminations.py
sim/bebop_training/experiments/: exp_flat_balance.py  exp_flat_balance_robust_v2.py  exp_flat_balance_v2.py  exp_flat_locomotion_v2.py  exp_rough_terrain.py  exp_standing.py
sim/docker/: Dockerfile  entrypoint.sh
sim/scripts/: post_import_bebopv2.py
sim/usd/bebopv2/: bebopv2.usda
sim/usd/bebopv2/payloads/: base.usda  instances.usda  materials.usda  robot.usda
sim/usd/bebopv2/payloads/Physics/: mujoco.usda  physics.usda  physx.usda
