[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bebop_training"
version = "0.1.0"
description = "Bebop Robot RL Extension"
dependencies = [
    "isaaclab"
]

[tool.setuptools]
# Auto-discover all packages (including subpackages)
packages = { find = {} }