[package]
name = "bebop-app"
version = "0.1.0"
description = "Bebop companion app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bebop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
btleplug = "0.12"
tokio = { version = "1.40", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
futures = "0.3"
uuid = "1.10"
bytes = "1.7"

# Wire protocol shared with the Jetson agent. Path-dep into the
# jetson-agent workspace so there is exactly one source of truth for the
# .proto schema and one set of generated Rust types on this side.
# Building this requires `protoc` to be on PATH (same prereq as the
# agent's own build).
bebop-proto = { path = "../../jetson-agent/bebop-proto" }
prost = "0.13"
