[package]
name = "bebop-linux"
version = "0.1.0"
edition = "2021"
authors = ["Bebop Bot Team"]
description = "Linux runtime for Bebop V2 robot — multi-mode (Idle / DialIn / RunPolicy) server with SocketCAN + ONNX policy."

[lib]
name = "bebop_linux"
path = "src/lib.rs"

[[bin]]
name = "bebop-linux"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "time", "sync", "signal", "net", "macros"] }
tokio-stream = "0.1"
futures = "0.3"

# CAN bus
socketcan = "3.3"

# HTTP + WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ONNX Runtime for neural network inference.
#
# We use the `load-dynamic` feature so the build does NOT statically link
# a prebuilt `libonnxruntime.{a,so}`. Two reasons:
#
#   1. CI is pinned to ubuntu-22.04-arm (glibc 2.35) for JetPack 6
#      compatibility, but the default `download-binaries` feature pulls
#      a prebuilt blob compiled against newer glibc / libstdc++
#      (uses `__isoc23_strtol*` from glibc 2.38 and `__cxa_call_terminate`
#      from a newer libstdc++), which fails to link in CI.
#   2. On the Jetson we want the JetPack-supplied, CUDA-enabled
#      `libonnxruntime.so` anyway, not pyke's CPU-only prebuilt.
#
# At runtime, `ort` reads the dylib path from the `ORT_DYLIB_PATH` env
# var; if unset it falls back to `libonnxruntime.so` resolved via the
# normal linker search path (LD_LIBRARY_PATH, /usr/lib/aarch64-linux-gnu,
# /usr/local/lib, ...). The first ORT call is what triggers the dlopen,
# so unit tests that don't construct a `Session` still pass without the
# lib being installed.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Math
nalgebra = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Time handling
chrono = "0.4"

# Wire protocol shared with the Tauri app and the Jetson agent.
bebop-proto = { path = "../../jetson-agent/bebop-proto" }
prost = "0.13"
bytes = "1.7"

# BNO080/BNO085 over Linux I²C (SHTP). Used for optional IMU tracing until
# the policy path consumes live `ImuState`.
bno080 = "0.1.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
i2cdev = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
