[package]
name = "bebop-linux"
version = "0.1.0"
edition = "2021"
authors = ["Bebop Bot Team"]
description = "Linux runtime for Bebop V2 robot — multi-mode (Idle / DialIn / RunPolicy) server with SocketCAN + ONNX policy."

[lib]
name = "bebop_linux"
path = "src/lib.rs"

[[bin]]
name = "bebop-linux"
path = "src/main.rs"

# Hardware smoke test for the BNO080/BNO085 over SPI. Independent of the
# main runtime — pulls in `bno08x-rs` and talks straight to `/dev/spidev0.0`
# with INT/RST GPIOs provided on the CLI. Use this to verify the wiring
# and the SPI-mode jumpers when bringing up a new IMU. The production
# `imu.rs` path uses the same crate / bus / pin assignments. See
# `src/bin/imu_probe.rs` for CLI usage and `config/bebop_v2.yaml` for
# the canonical pinout.
[[bin]]
name = "imu-probe"
path = "src/bin/imu_probe.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "time", "sync", "signal", "net", "macros"] }
tokio-stream = "0.1"
futures = "0.3"

# CAN bus
socketcan = "3.3"

# HTTP + WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ONNX Runtime for neural network inference.
#
# We use the `load-dynamic` feature so the build does NOT statically link
# a prebuilt `libonnxruntime.{a,so}`. Two reasons:
#
#   1. CI is pinned to ubuntu-22.04-arm (glibc 2.35) for JetPack 6
#      compatibility, but the default `download-binaries` feature pulls
#      a prebuilt blob compiled against newer glibc / libstdc++
#      (uses `__isoc23_strtol*` from glibc 2.38 and `__cxa_call_terminate`
#      from a newer libstdc++), which fails to link in CI.
#   2. On the Jetson we want the JetPack-supplied, CUDA-enabled
#      `libonnxruntime.so` anyway, not pyke's CPU-only prebuilt.
#
# At runtime, `ort` reads the dylib path from the `ORT_DYLIB_PATH` env
# var; if unset it falls back to `libonnxruntime.so` resolved via the
# normal linker search path (LD_LIBRARY_PATH, /usr/lib/aarch64-linux-gnu,
# /usr/local/lib, ...). The first ORT call is what triggers the dlopen,
# so unit tests that don't construct a `Session` still pass without the
# lib being installed.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
ndarray = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Math
nalgebra = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Time handling
chrono = "0.4"

# Wire protocol shared with the Tauri app and the Jetson agent.
bebop-proto = { path = "../../jetson-agent/bebop-proto" }
prost = "0.13"
bytes = "1.7"

# BNO080/BNO085 over Linux SPI (`spidev` + `gpiod`). Used by both the
# `imu-probe` diagnostic bin and the production `imu.rs` path.
#
# We point at a *vendored* copy of `bno08x-rs` 2.0.1 (rather than the
# crates.io version) so we can patch:
#
#   1. `report_enabled: [bool; 16]` → `[_; 256]`, otherwise enabling
#      report 0x28 (AR/VR Stabilized Rotation Vector — the EMI-hardened
#      replacement for 0x05 used by the old Teensy firmware in
#      `firmware/bebop-locomotion/include/BNO085_IMU.h`) panics the
#      driver on the first feature-response message.
#   2. Adds parsing + accessors for SH-2 reports 0x28 and 0x29 (the
#      AR/VR-Stabilized rotation reports), which the upstream crate
#      does not handle at all.
#
# See `vendor/bno08x-rs/Cargo.toml` for the patch markers and
# re-vendoring notes.
bno08x-rs = { path = "vendor/bno08x-rs" }

# Argument parsing for the `imu-probe` diagnostic binary. Pulled in via
# the `derive` feature so the probe can declare its CLI as a struct.
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
