[package]
name = "bebop-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared protobuf definitions for Bebop agent <-> mobile app."

[dependencies]
prost = { workspace = true }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
